--- a/app/static/css/layout_top_navbar.css
+++ b/app/static/css/layout_top_navbar.css
@@ -2,6 +2,7 @@
 html, body {
     height: 100%;
     padding-top: 30px;
+    width: 100%;
 }
 
 .navbar {
@@ -9,6 +10,14 @@ html, body {
     border: 1px solid transparent;
 }
 
-#navar-right{
-    margin-right:10px;
+#navar-right {
+    margin-right: 10px;
 }
+
+
+/*@media screen and (min-width: 767px) {*/
+    /*.content {*/
+        /*flex: 0 0 65%;*/
+        /*max-width: 65%;*/
+    /*}*/
+/*}*/
